<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_color"
    android:orientation="vertical"
    tools:context=".ui.PricesHistoryGraphFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/historypricefragCardVw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/historypriceTitleTxtVw"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>


    <androidx.core.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <org.eazegraph.lib.charts.ValueLineChart

                android:id="@+id/cubiclinechart"

                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="9dp"
                app:egActivateIndicatorShadow="true"
                app:egAnimationTime="1500"
                app:egCurveSmoothness="0.1"
                app:egEmptyDataText="pas de prix"
                app:egIndicatorLeftPadding="9dp"
                app:egIndicatorLineColor="#FE6DA8"
                app:egIndicatorShadowColor="@color/defaultcolor"
                app:egIndicatorShadowStrength="1dp"
                app:egIndicatorTextColor="@color/defaultcolor"
                app:egIndicatorTextSize="14sp"
                app:egIndicatorTextUnit="@string/TND"
                app:egIndicatorTopPadding="12dp"
                app:egLegendColor="@color/defaultcolor"
                app:egLegendHeight="40dp"
                app:egLegendTextSize="12sp"
                app:egLineStroke="1dp"
                app:egMaxYZoom="0.5"
                app:egScalingFactor="0.5"
                app:egShowDecimal="true"
                app:egShowLegendBeneathIndicator="true"
                app:egShowStandardValue="true"
                app:egShowValueIndicator="true"
                app:egUseCubic="true"

                app:egUseDynamicScaling="true"
                app:egUseOverlapFill="false"
                app:egXAxisStroke="1dp">


            </org.eazegraph.lib.charts.ValueLineChart>

            <RadioGroup
                android:id="@+id/historyPriceRadioGroupe"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/monoprixRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/monoprix"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/carrefourRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carrefour"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/mgRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mg"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/geantRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Géant"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/azizaRadioBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/azziza"
                    android:textColor="@color/black" />
            </RadioGroup>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>




