<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search_color"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/titlecarVw"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="6dp"
        app:cardBackgroundColor="@color/search_color"
        app:cardCornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fidCardTitleTxtVw"
            android:layout_width="match_parent"
            android:layout_height="56dp"

            android:gravity="center"
            android:text="@string/Cartes_de_fidélitées"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Info_cartefid_activity"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/dividerFidCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlecarVw" />


    <View
        android:id="@+id/dividerFidCard"
        android:layout_width="wrap_content"
        android:layout_height="0.1dp"
        android:layout_marginTop="12dp"
        android:background="@color/defaultcolor"
        app:layout_constraintBottom_toTopOf="@id/rvFidCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFidCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        app:layout_constraintBottom_toTopOf="@id/addFidCardTxVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerFidCard" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/empty_fidcard_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/addFidCardTxVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/empty" />

    <Button
        android:id="@+id/addFidCardTxVw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:text="@string/Ajoutezcartefidelite"
        android:textAllCaps="false"
        android:textColor="@color/btnText_color"
        android:theme="@style/Button.Bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
